jni-macros/tests/ui/native_method_struct/fail/raw_wrong_parameter_count.stderr
error[E0308]: mismatched types
  --> tests/ui/native_method_struct/fail/raw_wrong_parameter_count.rs:19:14
   |
16 |       let _method = native_method! {
   |  ___________________-
17 | |         name = "myMethod",
18 | |         sig = (a: jint, b: jint) -> void,
19 | |         fn = my_method_impl,
   | |              ^^^^^^^^^^^^^^ incorrect number of function parameters
20 | |         raw = true,
21 | |     };
   | |_____- expected due to this
   |
   = note: expected fn pointer `extern "system" for<'local> fn(EnvUnowned<'local>, JObject<'local>, i32, i32)`
                 found fn item `extern "system" for<'local> fn(EnvUnowned<'local>, JObject<'local>, i32) {my_method_impl}`
